# python_ml_project_skeleton

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  README.md  dev_requirements.txt  doc_requirements.txt  env.yml  readthedocs.yml  setup.cfg
.github/workflows/: docs.yml  gh-pages.yml  publish.yml  test_code.yml  test_docs.yml  test_docs.yml.backup  test_packaging.yml  test_publish.yml
docs/: add.rst  build.sh  conf.py  deploy.sh  doc_env.yml  doc_requirements.txt  index.rst  subtract.rst
docs/_templates/: page.html  versioning.html
docs/docs/_build/html/: .buildinfo  add.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  readme_link.html  search.html  searchindex.js
docs/docs/_build/html/.doctrees/: add.doctree  changelog.doctree  environment.pickle  index.doctree  readme_link.doctree
docs/docs/_build/html/_modules/: index.html
docs/docs/_build/html/_modules/pmps/api/: add.html
docs/docs/_build/html/_sources/: index.rst.txt
docs/docs/_build/html/_static/: documentation_options.js
docs/source/: add.rst  conf.py  index.rst
docs/source/_templates/: docsite-index-redirect.html  page.html  versioning.html
packaging/: doc_env.yml  package_env.yml  test_env.yml
pmps/: __init__.py
pmps/api/: __init__.py  add.py  subtract.py
pmps/core/: __init__.py  add.py  subtract.py
tests/: __init__.py  dev_requirements.txt  test_env.yml  test_requirements.txt
tests/api/: test_add.py  test_subtract.py
