[flake8]
ignore = D203
exclude = .*,__pycache__,docs/source/conf.py
max-line-length = 120

[metadata]
name = pmps
version = file: VERSION
author = samy khelifi
author_email = samy.khelifi@ign.fr
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samysung/python_ml_project_skeleton
project_urls =
    Bug Tracker = https://github.com/samysung/python_ml_project_skeleton/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = python_ml_project_skeleton
packages = find:
python_requires = >=3.9

[options.packages.find]
where = python_ml_project_skeleton