[flake8]
ignore = D203
exclude = .*,__pycache__,docs/source/conf.py
max-line-length = 120

[metadata]
name = pmps
version = file: VERSION
author = samy khelifi
author_email = samy.khelifi@ign.fr
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samysung/python_ml_project_skeleton
project_urls =
    Bug Tracker = https://github.com/samysung/python_ml_project_skeleton/issues

# to see classifiers available for pypi see: https://pypi.org/pypi?%3Aaction=list_classifiers
# to see classifiers available for test.pypi see: https://test.pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence



[options]
package_dir =
    =pmps
packages = find:
python_requires = >=3.9
install_requires =
    geopandas>=0.10
    rasterio>=1.1.5
include_package_data=True
[options.package_data]
* = *.yml

[options.packages.find]
where = pmps
